run twisted/incremental/gpt-4o-1

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,26 +9,128 @@ on:
 #   maximum_number_of_builds: 0
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     env:
-      TOX_ENV: py38
+      TOX_ENV: tests
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
     - uses: actions/setup-python@v5.0.0
       with:
         python-version: 3.8
-    - run: pip install tox
-    - run: tox -e $TOX_ENV
+    - run: pip install tox codecov
+    - run: if [[ -n "${TOX_ENV}" ]]; then tox -e $TOX_ENV; fi
+    - run: if [[ "$PUSH_DOCS" == "true" ]]; then ./.travis/build_docs.sh; fi
+    - run: codecov
   test_2:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     env:
-      TOX_ENV: py38
+      TOX_ENV: tests
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
     - uses: actions/setup-python@v5.0.0
       with:
         python-version: 3.8
-    - run: pip install tox
-    - run: tox -e $TOX_ENV
+    - run: pip install tox codecov
+    - run: if [[ -n "${TOX_ENV}" ]]; then tox -e $TOX_ENV; fi
+    - run: if [[ "$PUSH_DOCS" == "true" ]]; then ./.travis/build_docs.sh; fi
+    - run: codecov
+  test_3:
+    runs-on: ubuntu-22.04
+    env:
+      TOX_ENV: tests
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: 3.8
+    - run: pip install tox codecov
+    - run: if [[ -n "${TOX_ENV}" ]]; then tox -e $TOX_ENV; fi
+    - run: if [[ "$PUSH_DOCS" == "true" ]]; then ./.travis/build_docs.sh; fi
+    - run: codecov
+  test_4:
+    runs-on: ubuntu-22.04
+    env:
+      TOX_ENV: tests
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: 3.8
+    - run: pip install tox codecov
+    - run: if [[ -n "${TOX_ENV}" ]]; then tox -e $TOX_ENV; fi
+    - run: if [[ "$PUSH_DOCS" == "true" ]]; then ./.travis/build_docs.sh; fi
+    - run: codecov
+  test_5:
+    runs-on: ubuntu-22.04
+    env:
+      TOX_ENV: tests
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: 3.8
+    - run: pip install tox codecov
+    - run: if [[ -n "${TOX_ENV}" ]]; then tox -e $TOX_ENV; fi
+    - run: if [[ "$PUSH_DOCS" == "true" ]]; then ./.travis/build_docs.sh; fi
+    - run: codecov
+  test_6:
+    runs-on: ubuntu-22.04
+    env:
+      TOX_ENV: tests
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: 3.9
+    - run: pip install tox codecov
+    - run: if [[ -n "${TOX_ENV}" ]]; then tox -e $TOX_ENV; fi
+    - run: if [[ "$PUSH_DOCS" == "true" ]]; then ./.travis/build_docs.sh; fi
+    - run: codecov
+  test_7:
+    runs-on: ubuntu-22.04
+    env:
+      TOX_ENV: mypy
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: '3.9'
+    - run: pip install tox codecov
+    - run: if [[ -n "${TOX_ENV}" ]]; then tox -e $TOX_ENV; fi
+    - run: if [[ "$PUSH_DOCS" == "true" ]]; then ./.travis/build_docs.sh; fi
+    - run: codecov
+  test_8:
+    runs-on: ubuntu-22.04
+    env:
+      TOX_ENV: apidocs
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: '3.9'
+    - run: pip install tox codecov
+    - run: if [[ -n "${TOX_ENV}" ]]; then tox -e $TOX_ENV; fi
+    - run: if [[ "$PUSH_DOCS" == "true" ]]; then ./.travis/build_docs.sh; fi
+    - run: codecov
+  test_9:
+    runs-on: ubuntu-22.04
+    env:
+      PUSH_DOCS: 'true'
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: '3.9'
+    - run: pip install tox codecov
+    - run: if [[ -n "${TOX_ENV}" ]]; then tox -e $TOX_ENV; fi
+    - run: if [[ "$PUSH_DOCS" == "true" ]]; then ./.travis/build_docs.sh; fi
+    - run: codecov
