--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,32 +14,18 @@ jobs:
       uses: actions/checkout@v4.1.0
     - uses: actions/setup-python@v5.0.0
       with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install -r requirements-dev.txt
-    - run: pip install -e .
-    - run: pytest pywnedpasswords/tests/
-  test_2:
-    runs-on: ubuntu-latest
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install -r requirements-dev.txt
-    - run: pip install -e .
-    - run: flake8 pywnedpasswords
-  test_3:
-    runs-on: ubuntu-latest
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install -r requirements-dev.txt
-    - run: pip install -e .
-    - run: black --safe --check
+        python-version: "${{ matrix.python }}"
+    - run: pip install -r requirements.txt
+    - run: "./setconf.py --test"
+    - run: cd testcases && ./test.sh
+    strategy:
+      matrix:
+        python:
+        - '3.8'
+        - '3.8'
+        - '3.8'
+        - '3.8'
+        - '3.8'
+        - '3.8'
+        - 3.8
+        - pypy
