--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,97 +8,22 @@ on:
 #   maximum_number_of_builds: 0
 jobs:
   test:
-    runs-on: ubuntu-latest
-    env:
-      TOXENV: py310
+    runs-on: ubuntu-22.04
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
     - uses: actions/setup-python@v5.0.0
       with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install -U setuptools tox pip virtualenv
-    - run: pip install -e .
-    - run: pip install pytest-cov codecov -r tests/requirements.txt
-    - run: tox
-    - run: py.test tests/ example/ --cov=./
-      if: "${{ success() }}"
-    - run: codecov
-      if: "${{ success() }}"
-  test_2:
-    runs-on: ubuntu-latest
-    env:
-      TOXENV: py39
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.9
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install -U setuptools tox pip virtualenv
-    - run: pip install -e .
-    - run: pip install pytest-cov codecov -r tests/requirements.txt
-    - run: tox
-    - run: py.test tests/ example/ --cov=./
-      if: "${{ success() }}"
-    - run: codecov
-      if: "${{ success() }}"
-  test_3:
-    runs-on: ubuntu-latest
-    env:
-      TOXENV: py38
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install -U setuptools tox pip virtualenv
-    - run: pip install -e .
-    - run: pip install pytest-cov codecov -r tests/requirements.txt
-    - run: tox
-    - run: py.test tests/ example/ --cov=./
-      if: "${{ success() }}"
-    - run: codecov
-      if: "${{ success() }}"
-  test_4:
-    runs-on: ubuntu-latest
-    env:
-      TOXENV: py38
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install -U setuptools tox pip virtualenv
-    - run: pip install -e .
-    - run: pip install pytest-cov codecov -r tests/requirements.txt
-    - run: tox
-    - run: py.test tests/ example/ --cov=./
-      if: "${{ success() }}"
-    - run: codecov
-      if: "${{ success() }}"
-  test_5:
-    runs-on: ubuntu-latest
-    env:
-      TOXENV: py38
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install -U setuptools tox pip virtualenv
-    - run: pip install -e .
-    - run: pip install pytest-cov codecov -r tests/requirements.txt
-    - run: tox
-    - run: py.test tests/ example/ --cov=./
-      if: "${{ success() }}"
-    - run: codecov
-      if: "${{ success() }}"
+        python-version: "${{ matrix.python }}"
+    - run: pip install -U --force setuptools pip
+    - run: "./setup.py develop"
+    - run: pip install -e '.[tests]'
+    - run: pylama
+    - run: py.test
+    strategy:
+      matrix:
+        python:
+        - '3.8'
+        - '3.8'
+        - '3.8'
+        - '3.8'
